--- a/Application/FaceDetection-Pi-Client/Dockerfile
+++ b/Application/FaceDetection-Pi-Client/Dockerfile
@@ -3,7 +3,8 @@ FROM alpine AS builder
 ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v3.0.0%2Bresin/qemu-3.0.0+resin-arm.tar.gz
 RUN apk add curl && curl -L ${QEMU_URL} | tar zxvf - -C . --strip-components 1
 
-FROM arm32v7/python:3.6-buster
+#FROM arm32v7/python:3.6-buster
+FROM balenalib/raspberrypi3-debian:buster
 # Add QEMU
 COPY --from=builder qemu-arm-static /usr/bin
 WORKDIR /var/lib/fd-pi-client
