--- a/Application/FaceDetection-Pi-Client/Dockerfile
+++ b/Application/FaceDetection-Pi-Client/Dockerfile
@@ -9,6 +9,7 @@ FROM balenalib/raspberrypi3-debian-python:latest
 COPY --from=builder qemu-arm-static /usr/bin
 WORKDIR /var/lib/fd-pi-client
 COPY . .
+export READTHEDOCS=True
 RUN pip install -r requirements.txt \
 && rm requirements.txt
 ENV PYTHONPATH=/var/lib/fd-pi-client
