debug(edge-sender): docker file for raspberry pi

--- a/Application/FaceDetection-Edge/sender/Dockerfile_arm
+++ b/Application/FaceDetection-Edge/sender/Dockerfile_arm
@@ -1,5 +1,5 @@
-FROM arm32v7/python:3.6-buster
-
+#FROM arm32v7/python:3.6-buster
+FROM balenalib/raspberrypi3-debian-python:latest
 WORKDIR /var/lib/fd-edge-send
 
 COPY . .
