--- a/Application/FaceDetection-Edge/sender/Dockerfile_arm
+++ b/Application/FaceDetection-Edge/sender/Dockerfile_arm
@@ -1,9 +1,10 @@
-FROM alpine AS builder
+FROM balenalib/raspberrypi3-debian-python:latest As builder
 # Download QEMU, see https://github.com/docker/hub-feedback/issues/1261
 ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v3.0.0%2Bresin/qemu-3.0.0+resin-arm.tar.gz
 RUN apk add curl && curl -L ${QEMU_URL} | tar zxvf - -C . --strip-components 1
 
-FROM balenalib/raspberrypi3-debian-python:latest
+#FROM balenalib/raspberrypi3-debian-python:latest
+FROM arm32v7/alpine:latest
 # Add QEMU
 COPY --from=builder qemu-arm-static /usr/bin
 
