--- a/Application/FaceDetection-Pi-Client/Dockerfile
+++ b/Application/FaceDetection-Pi-Client/Dockerfile
@@ -28,4 +28,5 @@ RUN READTHEDOCS=True pip install picamera
 ENV PYTHONPATH=/var/lib/fd-pi-client
 
 #ENTRYPOINT python3 /var/lib/fd-pi-client/captureSend.py
-CMD ["python3","captureSend.py"]
+RUN echo "$PWD"
+CMD ["python3","/var/lib/fd-pi-client/captureSend.py"]
