debug(pi-client): docker file for raspberry pi

--- a/Application/FaceDetection-Pi-Client/Dockerfile
+++ b/Application/FaceDetection-Pi-Client/Dockerfile
@@ -17,7 +17,7 @@
 # ENTRYPOINT python3 captureSend.py
 
 
-FROM resin/raspberry-pi-python:3
+FROM resin/raspberry-pi-python:3.6-slim
 
 WORKDIR /var/lib/fd-pi-client
 
