--- a/Application/FaceDetection-Edge/receiver/Dockerfile_arm
+++ b/Application/FaceDetection-Edge/receiver/Dockerfile_arm
@@ -1,4 +1,5 @@
-FROM arm32v7/python:3.6-buster
+FROM resin/raspberry-pi-python:3.6-slim
+
 WORKDIR /var/lib/fd-edge-rec
 
 COPY . .
@@ -7,4 +8,4 @@ RUN mkdir images
 
 ENV PYTHONPATH=/var/lib/fd-edge-rec
 
-ENTRYPOINT python3 rec.py
+CMD ["python3","rec.py"]
