--- a/Application/FaceDetection-Edge/sender/Dockerfile_arm
+++ b/Application/FaceDetection-Edge/sender/Dockerfile_arm
@@ -1,12 +1,4 @@
-FROM alpine AS builder
-# Download QEMU, see https://github.com/docker/hub-feedback/issues/1261
-ENV QEMU_URL https://github.com/balena-io/qemu/releases/download/v3.0.0%2Bresin/qemu-3.0.0+resin-arm.tar.gz
-RUN apk add curl && curl -L ${QEMU_URL} | tar zxvf - -C . --strip-components 1
-
-#FROM balenalib/raspberrypi3-debian-python:latest
-FROM arm32v7/python:3-alpine
-# Add QEMU
-COPY --from=builder qemu-arm-static /usr/bin
+FROM resin/raspberry-pi-python:3.6-slim
 
 WORKDIR /var/lib/fd-edge-send
 
@@ -16,4 +8,4 @@ RUN mkdir greyImages
 
 ENV PYTHONPATH=/var/lib/fd-edge-send
 
-ENTRYPOINT python3 edgeSend.py
+CMD ["python3","edgeSend.py"]
