fix(edge-processor): pip depedencies directly added.

--- a/Application/FaceDetection-Edge/processor/Dockerfile_arm
+++ b/Application/FaceDetection-Edge/processor/Dockerfile_arm
@@ -4,6 +4,8 @@ WORKDIR /var/lib/fd-edge
 
 COPY . .
 
+RUN pip install --upgrade pip
+
 RUN pip3 install image
 RUN pip3 install opencv-python-headless
 
