fix(edge):workdir changed to same accross all edge components

--- a/Application/FaceDetection-Edge/processor/Dockerfile
+++ b/Application/FaceDetection-Edge/processor/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6-slim
-WORKDIR /var/lib/fd-edge-pro
+WORKDIR /var/lib/fd-edge
 
 COPY . .
 
@@ -9,6 +9,6 @@ RUN pip3 install -r requirements.txt \
 RUN mkdir images
 RUN mkdir greyImages
 
-ENV PYTHONPATH=/var/lib/fd-edge-pro
+ENV PYTHONPATH=/var/lib/fd-edge
 
 ENTRYPOINT python3 2grey.py
