--- a/Application/FaceDetection-Edge/receiver/Dockerfile
+++ b/Application/FaceDetection-Edge/receiver/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.6-slim
-WORKDIR /var/lib/fd-edge-rec
+WORKDIR /var/lib/fd-edge
 
 COPY . .
 
 
 RUN mkdir images
 
-ENV PYTHONPATH=/var/lib/fd-edge-rec
+ENV PYTHONPATH=/var/lib/fd-edge
 
 ENTRYPOINT python3 rec.py
